--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean:logs": "rm -rf ./server/logs/*.log"
   },
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
@@ -23,6 +24,7 @@
     "express": "~4.16.1",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "materialize-css": "^1.0.0-rc.2",
@@ -30,11 +32,12 @@
     "mongoose": "^7.6.3",
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.7",
     "validator": "^13.11.0",
     "webpack": "^5.76.1",
     "webpack-dev-middleware": "^6.1.1",
     "webpack-hot-middleware": "^2.25.4",
-    "winston": "^3.8.2",
+    "winston": "^3.10.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
